fixtures/abnormal-relative-without-node_modules/foo/bar/baz/test.mjs
console.log(import.meta.resolve('jest-runner-../../..')) // error
